[package]
name = "storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]
rstest = "0.18"
tempfile = "3.9"
heapstore = { path = "./heapstore" }
common = { path = "../common" }
memstore = { path = "./memstore" }
# foster_btree = { path = "./foster_btree" }
# paged_mem_store = { path = "./paged_mem_store" }
# idx_fixed_store = { path = "./idx_fixed_store" }
utilities = { path = "../utilities" }
